Fix card on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,5 @@ body {
   background-color: #171941;
   color: whitesmoke;
   font-family: "Courier New", Courier, monospace;
-  padding: 20px;
-  margin: 5px;
+  margin: 12.5px;
 }
